tests/backend/checkmach/fail1.output
File "fail1.ml", line 1:
Error: Annotation check for noalloc failed on function camlFail1__test15_HIDE_STAMP
